# staticware

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
CHANGELOG/: v0.2.0.md
docs/: api.md  index.md  installation.md  usage.md
src/staticware/: __init__.py  cli.py  middleware.py
src/staticware/contrib/django/: __init__.py  apps.py
src/staticware/contrib/django/templatetags/: staticware_tags.py
tests/: conftest.py  test_staticware.py
tests/django/: conftest.py  test_django.py  urls.py
